--- a/Report/Report.tex
+++ b/Report/Report.tex
@@ -144,7 +144,7 @@
 	
 	Equations \ref{eq:x_dyn}-\ref{eq:theta_dyn} represent perfect conditions as they do not account for process noise. The state vector for this ideal trajectory is designated as \texttt{state.clean} in the code. This ensures the prediction adheres to the actual physical dynamics.
 	
-	The clean simulation utilizes first-order Euler integration to propagate the system state forward in time. At each time step $t$, the state increments are computed based on the previous state vector $\mathbf{x}_{t-1}$ and the current control inputs 1. The positional and angular updates are derived linearly from the previous velocities:
+	The clean simulation utilizes first-order Euler integration to propagate the system state forward in time. At each time step $t$, the state increments are computed based on the previous state vector $\mathbf{x}_{t-1}$ and the current control inputs. The positional and angular updates are derived linearly from the previous velocities:
 	\begin{equation}
 		\Delta x = \dot{x}_{t-1} \Delta t, \quad \Delta y = \dot{y}_{t-1} \Delta t, \quad \Delta \theta = \dot{\theta}_{t-1} \Delta t\label{eq:euler_kinematics}
 	\end{equation}The changes in linear and angular velocities are calculated by discretizing the dynamic equations of motion (Eq.\ref{eq:x_dyn}-\ref{eq:theta_dyn}). These updates account for the non-linear coupling introduced by the quadrotor's orientation $\theta$:
@@ -301,7 +301,7 @@
 		\bar{\mathbf{z}}_t = \frac{1}{N} \sum_{k=t-N+1}^{t} \mathbf{z}_k\label{eq:moving_average}
 	\end{equation}
 	These smoothed measurements are directly substituted into the state vector for the observable variables ($y$, $\theta$, and $\dot{\theta}$), bypassing the dynamic model for these specific degrees of freedom.
-	For the remaining unobserved states ($x$, $\dot{x}$, and $\dot{y}$), the filter utilizes the system dynamics (Eq. \ref{eq:x_dyn}-\ref{eq:y_dyn}) for propagation. Crucially, these dynamic updates rely on the smoothed orientation angle $\theta_t$ rather than the previous state estimate 3. The horizontal position is updated kinematically, while the velocity increments are derived from the thrust projections:
+	For the remaining unobserved states ($x$, $\dot{x}$, and $\dot{y}$), the filter utilizes the system dynamics (Eq. \ref{eq:x_dyn}-\ref{eq:y_dyn}) for propagation. Crucially, these dynamic updates rely on the smoothed orientation angle $\theta_t$ rather than the previous state estimate. The horizontal position is updated kinematically, while the velocity increments are derived from the thrust projections:
 	\begin{align}
 		\Delta x &= \dot{x}_{t-1} \Delta t \\
 		\Delta \dot{x} &= -\frac{(u_1 + u_2)}{m}\sin(\theta_t) \Delta t \\
