--- a/Report/Report.tex
+++ b/Report/Report.tex
@@ -277,7 +277,7 @@
 	The Kalman gain $K$ is calculated to determine the weighting between sensor data and physics predictions:
 	\begin{align}
 		S &= C P_k^- C^T + R \\
-		K &= P_k^- C^T S^{-1}
+		K &= P_k^- C^T S^{-1} \label{eq:K}
 	\end{align}
 	
 	Process noise covariance Q and measurement noise covariance R were defined as $I \times 0.003^2$ and $I \times 0.01^2$, respectively. This effectively means that the filter is "perfectly tuned."
@@ -633,7 +633,7 @@
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.9\linewidth]{rmse_growth_linear-roll}
-\caption{RMSE growth for $y$, $\dot{y}$, $\theta$, and $\dot{\theta}$ under increasing noise (linear scale, roll scenario). Another case, another running mean multiplier change, EKF stable as in the two previous examples (figs. \ref{fig:rmse-growth-linear-basic}, \ref{fig:rmse-growth-linear-horizontal}}
+\caption{RMSE growth for $y$, $\dot{y}$, $\theta$, and $\dot{\theta}$ under increasing noise (linear scale, roll scenario). Another case, another running mean multiplier change, EKF stable as in the two previous examples (figs. \ref{fig:rmse-growth-linear-basic}, \ref{fig:rmse-growth-linear-horizontal})}
 \label{fig:rmse-growth-linear-roll}
 \end{figure}
 
@@ -661,8 +661,15 @@
     \end{tabular}
 \end{table}
 
+	\subsection{Analysis of Estimation Performance}
 	
-	The EKF successfully mitigates sensor noise while maintaining close tracking of the true trajectory. It outperforms Running Mean filter. However, it is important to acknowledge the fact that the filter is perfectly tuned in all the tested scenarios.
+	The quantitative results presented in Table \ref{tab:rmse_results} demonstrate that the Extended Kalman Filter (EKF) significantly outperforms the running mean filter across all state variables. This performance gap is most pronounced in the unobserved states—specifically horizontal position ($x$), horizontal velocity ($\dot{x}$), and vertical velocity ($\dot{y}$). While the running mean filter achieves a Root Mean Square Error (RMSE) of 0.6632 m for the horizontal position, the EKF maintains an accuracy of 0.0417 m. This disparity arises because the running mean filter relies on a simplified kinematic propagation for unobserved states (Appendix B, lines 162–173), which lacks the corrective feedback mechanism found in the EKF’s state update equation (Eq. \ref{eq:ekf_state_update}).The EKF’s superior handling of nonlinearities is evident in the "Roll" scenario (Figure \ref{fig:trajectory-roll}). As the quadrotor undergoes a complete 360-degree rotation, the system dynamics become highly nonlinear due to the trigonometric coupling of the thrust vectors (Eq. \ref{eq:x_dyn}-\ref{eq:y_dyn}). The running mean filter, which simply smooths the sensor output (Eq. \ref{eq:moving_average}) and integrates the result, fails to account for the rapid changes in orientation, leading to the unbounded error growth observed in Figure \ref{fig:error-roll}. Conversely, the EKF updates its Jacobian matrix $F$ at every time step using the current state estimate (Appendix B, lines 108, 125-130), allowing it to accurately track the trajectory even during aggressive maneuvers.
+	
+	\subsection{Robustness Testing Methodology}
+	To evaluate the stability of the estimators under adverse conditions, a robustness analysis was conducted by systematically increasing the process and measurement noise levels. The testing procedure, implemented in robustness.m (Appendix C), applies a scalar multiplier to the baseline noise variances defined in the simulation (Appendix A, lines 112-113). The multiplier ranges from $0.2\times$ to $50\times$ the nominal values, effectively simulating sensor degradation and increasing environmental turbulence (Appendix C, lines 44-45).
+	
+	\subsection{Robustness Analysis Conclusions}
+	The response to increasing noise reveals a fundamental difference in filter architecture. As illustrated in the logarithmic growth plots (Figures \ref{fig:rmse-growth-log-basic}- \ref{fig:rmse-growth-log-fall}), the error in the EKF estimates grows linearly with the noise magnitude, maintaining stability even at high variance levels. In contrast, the running mean filter exhibits early divergence, particularly for the horizontal states ($x$ and $\dot{x}$).In the "Horizontal Recovery" scenario, the running mean’s estimation of $\dot{x}$ diverges significantly earlier than the EKF (Figure \ref{fig:rmse-growth-log-horizontal}). This is attributed to the integration of noisy orientation data without covariance tracking; the EKF mitigates this by weighing the theoretical model against the noisy measurements via the Kalman Gain $K$ (Eq. \ref{eq:measurement_residual}-\ref{eq:K}, Appendix B, line 142). The linear scale plots (Figures \ref{fig:rmse-growth-linear-basic}-\ref{fig:rmse-growth-linear-fall}) further confirm that while observed states ($y, \theta$) are relatively resilient in both filters due to direct sensor updates, the EKF provides a necessary layer of filtering that prevents high-frequency noise from corrupting the velocity estimates. Ultimately, the EKF proves to be the robust solution required for the nonlinear dynamics of the planar quadrotor. However, it is important to acknowledge the fact that the filter was perfectly tuned in all the tested scenarios, implying that tuning is a key to robust performance.
 	
 	Seed 47 was used for any random number generation in the report. All code can be accessed at https://github.com/Arseni10Lk/Planar-Quadrotor
 	
